# assemblytheorytools

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  att.bib  environment.yml  paper.bib  paper.md  pyproject.toml  setup.py
assemblytheorytools/: JO_calculator.py  MSInfer.py  README.md  Rust_Ai.py  __init__.py  assembly.py  assembly_pathv3.py  cell_tools.py  celltools.py  cif_to_mol.py  complexity_scores.py  complexityscores.py  construction.py  construction_string.py  file_tools.py  filetools.py  find_other_paths.py  findotherpaths.py  gen_mols.py  graph_tools.py  graphtools.py  log_parsing.py  mol_tools.py  moltools.py  neighborhood_enumeration.py  path_db_parsing.py  pathway.py  pathway_tools.py  plotting.py  reassembler.py  recursive_ma.py  seb_molecule_filter.py  seb_pathway_tools.py  seb_reassembler.py  string_pathway.py  string_tools.py  stringtools.py  tools_assemblydepth.py  tools_atoms.py  tools_cell.py  (+10 more)
build_tools/: README.md  environment.yml  environment_dev.yml
docs/: assPHX_compilation_on_SOL instructions  ass_cpp_compiliation_tips  list_of_functions  paper.md
examples/: CFG_string_comparison.py  README.md  amino_acid_joint_assembly.py  circle_assembly_plot_example.py  data.csv  enum_forward.py  enumerate_forward.py  figure5.py  heatmap_to_graph.py  joint_pathway.py  joint_undirected_string_example.py  kegg_c.py  kegg_c_all.py  metabolic_pathway.py  parallel_calculations.py  pathway_vis.py  reassemble_aa.py  reassemble_vo_space.py  rna_string.py  simple_arb_graph.py  simple_molecule_example.py  simple_string_example.py
tests/: README.md  test_atoms.py  (+25 more)
(+76 files in other folders)
